[package]
name = "log-analyser"
version = "1.0.0"
edition = "2021"
authors = ["Your Name <you@example.com>"]
description = "High-performance real-time log analyser with alerting and JSON export"
license = "MIT"
repository = "https://github.com/yourusername/log-analyser"
readme = "README.md"
keywords = ["logs", "monitoring", "cli", "analysis"]
categories = ["command-line-utilities"]

[[bin]]
name = "log-analyser"
path = "src/main.rs"

[dependencies]
regex      = "1.10"
serde      = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rayon      = "1.8"
clap       = { version = "4.4", features = ["derive"] }
chrono     = "0.4"
colored    = "2.1"
anyhow     = "1.0"

[profile.release]
opt-level = 3
lto        = true
codegen-units = 1
strip      = true
